data/forge_javadoc/1.7.10/raw/net/minecraft/command/PlayerSelector.md
---
title: "PlayerSelector"
description: "public class PlayerSelector extends java.lang.Object"
package: "net/minecraft/command"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/command/PlayerSelector.html"
sourceType: javadoc
---

# PlayerSelector

**Inheritance:** java.lang.Object → net.minecraft.command.PlayerSelector

## Class signature

```java
public class PlayerSelector extends java.lang.Object
```

## Constructors

- `PlayerSelector()`

## Methods

- `static IChatComponent func_150869_b(ICommandSender p_150869_0_, java.lang.String p_150869_1_)`
- `static java.util.Map func_96560_a(java.util.Map p_96560_0_)`
- `static boolean hasArguments(java.lang.String p_82378_0_)`
- `static boolean hasTheseArguments(java.lang.String p_82383_0_, java.lang.String p_82383_1_)`
- `static boolean matchesMultiplePlayers(java.lang.String p_82377_0_)`
- `static EntityPlayerMP matchOnePlayer(ICommandSender p_82386_0_, java.lang.String p_82386_1_)`
- `static EntityPlayerMP [] matchPlayers(ICommandSender p_82380_0_, java.lang.String p_82380_1_)`
